--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "webpack practise",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "start": "webpack serve --mode development"
   },
   "keywords": [
     "react",
@@ -17,12 +20,26 @@
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
+    "@types/react": "^17.0.6",
+    "@types/react-dom": "^17.0.5",
+    "@types/styled-components": "^5.1.9",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.4",
+    "css-modules-typescript-loader": "^4.0.1",
+    "html-webpack-plugin": "^5.3.1",
+    "prettier": "^2.3.0",
+    "react-hot-loader": "^4.13.0",
+    "style-loader": "^2.0.0",
+    "ts-loader": "^8.3.0",
+    "typescript": "^4.2.4",
+    "typescript-plugin-css-modules": "^3.2.0",
     "webpack": "^5.37.0",
-    "webpack-cli": "^4.7.0"
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0"
   }
 }
